css fix margin on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -144,5 +144,6 @@ h1 {
     width: 82%;
     justify-self: center;
     align-self: center;
+    margin-inline: auto;
   }
 }
